# abacus-agent

./: README.md  pyproject.toml
examples/google-adk/: checkresult.py
quick_start/: agent.py  quick_start.sh
src/abacusagent/: constant.py  google-adk-agent-template.py  main.py  version.py
src/abacusagent/modules/: abacus.py  bader.py  band.py  dos.py  elastic.py  eos.py  md.py  phonon.py  relax.py  scf.py  structure_editor.py  structure_generator.py  symmetry.py  tool_wrapper.py  vacancy.py  vibration.py  work_function.py
src/abacusagent/modules/submodules/: abacus.py  bader.py  band.py  cube.py  dos.py  elastic.py  eos.py  jdos_pyatb.py  md.py  phonon.py  pyatb.py  relax.py  scf.py  structure_editor.py  structure_generator.py  vacancy.py  vibration.py  work_function.py
src/abacusagent/modules/util/: chemical_elements.py  comm.py  pyatb.py
tests/integrate_test/: get_ref_result.py  get_test_result.py  pytest.ini  test_bader.py  test_band.py  test_dos.py  test_elastic.py  test_eos.py  test_md.py  test_phonon.py  test_relax.py  test_scf.py  test_tool_wrapper.py  test_vacancy_energy.py  test_vibration.py  test_work_function.py
tests/integrate_test/abacus_inputs_dirs/Al110/: Al_gga_8au_100Ry_2s2p1d.orb
tests/integrate_test/abacus_inputs_dirs/Fe-BCC-prim/: Fe_ONCV_PBE-1.2.upf  Fe_gga_7au_100Ry_4s2p2d1f.orb  STRU_dos
tests/integrate_test/abacus_inputs_dirs/H2/: H.upf  H_gga_6au_100Ry_2s1p.orb
tests/integrate_test/abacus_inputs_dirs/NaCl-prim/: Cl.upf  Cl_gga_6au_100Ry_2s2p1d.orb  Na.upf  STRU_dos  (+1 more)
tests/integrate_test/data/: ref_results.json
(+11 files in other folders)
