[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "abacusagent"
dynamic = ["version"]
description = "Abacus agent"
requires-python = ">=3.11"

dependencies = [
       "abacustest>=0.4.49",
       "numpy<2.0",
       "pymatgen>=2025.5.28",
       "bohr-agent-sdk==0.1.121",
       "bohrium-sdk==0.13.0",
       "dpdata>=0.2.24",
       "regex==2024.11.6",
       "pyatb==1.1.1"
]

[project.scripts]
abacusagent = "abacusagent.main:main"

[tool.setuptools]
package-dir = { "abacusagent" = "src/abacusagent" }

[tool.setuptools.dynamic]
version = { attr = "abacusagent.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["abacusagent*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
pythonpath = ["src"]  
testpaths = ["tests"] 
addopts = "-v"        

[project.optional-dependencies]
dev = ["mcp>=1.10.0",
       "abacustest>=0.4.49",
       "science-agent-sdk"
]
